# Git-Ai-Reviewer

./: CMakeLists.txt  README.md
Source/: main.cpp
Source/Configuration/: configuration.json
Source/Localization/: en-us.json  ru-ru.json
Source/Utilites/: ConfigurationUtilites.h  FormattingUtilites.h  GitUtilites.h  JsonUtilites.h  JsonUtilities.cpp  JsonUtilities.h
